<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/toolbarRoot"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/Theme.Form_valid_TD_BAUER_Nicolas.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="#B1EA15"
            app:popupTheme="@style/Theme.Form_valid_TD_BAUER_Nicolas.PopupOverlay" />

    </com.google.android.material.appbar.AppBarLayout>

    <include layout="@layout/content_main"/>

    <TextView
        android:id="@+id/date_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/toolbarRoot"
        android:textColor="@color/white"
        android:layout_marginTop="@dimen/margin_top_datetext_from_toolbar"
        android:textStyle="italic" />

    <EditText
        android:id="@+id/edit_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/date_text"
        android:layout_centerHorizontal="true"
        android:hint="@string/enter_name"
        android:inputType="textPersonName"
        android:textColor="@color/white"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/edit_first_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/edit_name"
        android:layout_centerHorizontal="true"
        android:hint="@string/enter_firstname"
        android:inputType="textPersonName"
        android:textColor="@color/white"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/text_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/edit_first_name"
        android:layout_centerHorizontal="true"
        android:textColor="@color/white"
        android:layout_marginTop="@dimen/margin_top_text_view_email" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/text_email"
        android:checkedButton="@+id/radioButton"
        android:gravity="center_horizontal">

        <RadioButton
            android:id="@+id/radioButtonF"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:text="@string/femme" />

        <RadioButton
            android:id="@+id/radioButtonH"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:text="@string/homme" />

    </RadioGroup>

    <LinearLayout
        android:id="@+id/layout_radio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/radioGroup"
        android:layout_marginTop="@dimen/margin2"
        android:orientation="horizontal">

        <CheckBox
            android:id="@+id/checkBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:checked="false"
            android:text="@string/checkbox1" />

        <CheckBox
            android:id="@+id/checkBox2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:text="@string/checkbox2" />

        <CheckBox
            android:id="@+id/checkBox3"
            android:layout_width="wrap_content"
            android:textColor="@color/white"
            android:layout_height="wrap_content"
            android:text="@string/checkbox3" />
    </LinearLayout>

    <ImageView
        android:id="@+id/img"
        android:layout_width="@dimen/width_img"
        android:layout_height="@dimen/height_img"
        android:layout_below="@id/layout_radio"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/image_de_profil"
        app:srcCompat="@mipmap/ic_launcher_round">

    </ImageView>

    <TextView
        android:id="@+id/info_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/img"
        android:textColor="@color/white"
        android:layout_centerHorizontal="true"
        android:text="@string/time_in_hour" />

    <EditText
        android:id="@+id/nb_hour"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/info_time"
        android:layout_centerHorizontal="true"
        android:foregroundTint="#FBF9F9"
        android:hint="@string/nb_hour"
        android:inputType="numberSigned"
        android:textColor="@color/white"
        android:textStyle="bold" />


    <Button
        android:id="@+id/button_reset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:layout_below="@id/nb_hour"
        android:layout_centerHorizontal="true"
        android:text="@string/reset" />

    <Button
        android:id="@+id/button_submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:layout_below="@id/button_reset"
        android:layout_centerHorizontal="true"
        android:text="@string/submit" />

    <Button
        android:id="@+id/button_home"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/button_submit"
        android:textColor="@color/white"
        android:layout_centerHorizontal="true"
        android:text="@string/home"/>



</RelativeLayout>